2002-03-16  Max Horn  <max@quendi.de>
	
	* Validation.pm: Added "BuildDependsOnly" to the list of known fields
	
	* PkgVersion.pm (resolve_depends): Fixed this so that splitoffs and splitoff
	masters always return the same (correct) build dependencies.
	
	* PkgVersion.pm (add_splitoff): Removed debug output ("Found a splitoff")
		
	* Services.pm (read_properties_lines): Handle nested heredocs correctly,
	and if errors are encountered, once more output the affected filename.

2002-02-13  Peter O'Gorman <ogorman@users.sourceforge.net>

	* Engine.pm (do_real_list): Don't read package info first, wait and
	see if it is needed. Fixed a mistake in the help text.

2002-03-13  Max Horn  <max@quendi.de>

	* PkgVersion.pm (phase_build): Fix so that root-dirs of splitoffs are
	properly removed again.

2002-03-13  Peter O'Gorman <ogorman@users.sourceforge.net>

	* Engine.pm: Support for options in apropos and list commands.

	* Services.pm: Added a get_term_width function.

2002-03-09  Max Horn  <max@quendi.de>

	* Engine.pm (cmd_apropos): Fixed apropos commands for strings like "gtk+"

2002-03-07  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Fix to make rebuilding splitoffs and splitoff
	master packages work correctly.

	* PkgVersion.pm (initialize): Expand percents in even more fields now:
	Suggests, Enhances, Recommends and Pre-Depends.
	(expand_percent_if_available): First converts field parameter to lower case.
	(phase_install): Fixed some issues with the Files field, and changed the
	order in which it is processed (now comes before DocFiles, not after)

2002-03-06  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Multitude of changes, implementing initial splitoff 
	support. Percent expansion is now done in all dependency related fields.

	* Package.pm (inject_description): Return the created PkgVersion object
	to the called. Used by splitoff code

	* Services.pm (read_properties): Split this function, creating two new